--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
     <title>Dokoto Note Making</title>    
 </head>
 <script src="https://unpkg.com/feather-icons"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NR76XPRV95"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NR76XPRV95');
+</script>
 <body class="bg-gray-100 font-ubuntu font-thin">
 
 
