--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
 
                   <!-- ADD NOTE OVERLAY -->
 
-            <div id="popup" class="hidden fixed flex justify-center items-center top-0  bg-gray-900 bg-opacity-70 z-10 w-full h-full">
+            <div id="popup" class="hidden fixed justify-center items-center top-0  bg-gray-900 bg-opacity-70 z-10 w-full h-full">
                 <div class="bg-primary w-3/4 h-1/2 lg:w-1/2 lg:h-1/2 lg:-ml-96 rounded p-6 shadow-lg">
                     <form action="#" class="h-full pb-10">
                         <div class="flex justify-end gap-10 mb-4">
